<resources>
    <string name="app_name">netkort</string>
    <string name="app_name_cap">Netkort</string>
    <string name="ping_single_image">icon_ping_single</string>
    <string name="ping_single_text">Ping a single host</string>
    <string name="ping_multiple_image">icon_ping_multiple</string>
    <string name="ping_multiple_text">Ping multiple hosts</string>
    <string name="port_scan_image">icon_port_scan</string>
    <string name="port_scan_text">Port scan a host</string>
    <string name="traceroute_image">icon_traceroute</string>
    <string name="traceroute_text">Traceroute a host</string>
    <string name="speed_test_image">icon_speed_test</string>
    <string name="speed_test_text">Speed test</string>
    <string name="network_sweep_image">icon_network_sweep</string>
    <string name="network_sweep_text">Network sweep</string>
    <string name="logs_image">icon_logs</string>
    <string name="logs_text">Logs</string>
    <string name="settings_image">icon_settings</string>
    <string name="settings_text">Settings</string>
    <string name="btn_ping">Ping</string>
    <string name="btn_port_scan">Port scan</string>
    <string name="btn_traceroute">Traceroute</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_save_log">Save Log</string>
    <string name="btn_save">Save</string>
    <string name="btn_speed_test">Speed test</string>
    <string name="btn_network_sweep">Network sweep</string>
    <string name="host_address_placeholder">Host IP or address</string>
    <string name="packet_count">Packet count</string>
    <string name="packet_timeout">Packet timeout</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="console_text_size">Console text size</string>
    <string name="console_theme">Console theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_ubuntu">Ubuntu</string>
    <string name="theme_kali">Kali</string>
    <string name="console_help">Show help on console</string>
    <string name="ip_range">IP range</string>
    <string name="max_hops">Maximum hops</string>
    <string name="about">Netkort : 1.0v\n\nA set of tools to observe your network.\nBy Amir-Mahdi Rasouli\n\n<a href="https://github.com/1MahdiR/Netkort">Github</a>\n\nLicensed under the <a href="https://github.com/1MahdiR/Netkort/blob/master/LICENSE">GPLv3</a></string>
    <string name="ping_single_note">Simple \'ping\' command. Sends ICMP packets to a host and waits for reply.\n\nSet \'packet count\' to max value to send ICMP packets continuously. Packet timeout is time to wait for a response.</string>
    <string name="ping_multiple_note">Sends ICMP packet to multiple hosts.\n\nAdd a host address field with \'+\' button. Packet timeout is time to wait for a response.</string>
    <string name="port_scan_note">Creates TCP connections with given host address and port range.\n\nTimeout is the time to wait for accepting the connection request.</string>
    <string name="traceroute_note">Traceroute the given host address.\n\nThis tool starts sending ICMP packet with ttl=1 (time to live). If the ttl exceeds or the ICMP packet gets no response the ttl will be increased by 1 and then another ICMP packet will be sent to host address.\nThis process continues until the ICMP packet reaches the host address.\n\nMaximum hops is the maximum number of ttl. Packet timeout is time to wait for a response.</string>
    <string name="speed_test_note">This tool calculates your download throughput.\nIt measures your download traffic and divide it by time.\nThe result may depend on several factors, such as WiFi signal strength, etc.\n\nPress \'SPEED TEST\' to start.</string>
    <string name="network_sweep_note">Sends ICMP packet to every IP in \'IP range\'.\n\nThe main usage of this tool is finding all devices in your local network. So for example if your local network is 192.168.0.0, Try this range (192.168.1–255.1–255).</string>
    <string name="log_note">Here you can read or delete the logs you saved before.</string>
</resources>