<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PingSingleActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drop_shadow"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chopsic"
            android:gravity="center"
            android:text="@string/app_name_cap"
            android:textColor="@color/blue_500"
            android:textSize="35sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/console"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="@drawable/console_bg" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/console_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="@drawable/console_tool_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/host_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/host_address_placeholder"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_500"
            android:importantForAutofill="no" />

        <LinearLayout
            android:id="@+id/ports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="Ports:"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/port_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="1"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_500"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="10dp"
                android:importantForAutofill="no"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="4"
                android:gravity="center"
                android:text="to"
                android:textColor="@color/gray_500"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/port_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="65535"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_500"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="10dp"
                android:importantForAutofill="no"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/packet_timeout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/connection_timeout"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/packet_timeout_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="9"
                android:progress="1" />

            <TextView
                android:id="@+id/packet_timeout_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="1 second"
                android:textColor="@color/gray_500"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_port_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_port_scan" />

            <Button
                android:id="@+id/button_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_stop" />

            <Button
                android:id="@+id/button_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_save_log" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>